--- a/testing-dbs/mongod-redhat-two.conf
+++ b/testing-dbs/mongod-redhat-two.conf
@@ -1,18 +1,18 @@
 storage:
-  dbPath: ~/data/z-db-3
+  dbPath: /data/z-db-3
+  wiredTiger:
+    engineConfig:
+      cacheSizeGB: 10
 processManagement:
   fork: true
 systemLog:
   destination: file
-  path: "~/data/z-db-3/mongod.log"
+  path: "/data/z-db-3/mongod.log"
   logAppend: true
 replication:
   replSetName: redhat-db
-storage:
-  wiredTiger:
-    engineConfig:
-      cacheSizeGB: 10
 net:
-  bindIpAll: true
+  bindIp: 0.0.0.0 
+  port: 27100
 
 
