--- a/testing-dbs/mongod-ubuntu-three.conf
+++ b/testing-dbs/mongod-ubuntu-three.conf
@@ -1,18 +1,18 @@
 storage:
-  dbPath: ~/data/z-db-2
+  dbPath: /data/z-db-3
+  wiredTiger:
+    engineConfig:
+      cacheSizeGB: 10
 processManagement:
   fork: true
 systemLog:
   destination: file
-  path: "~/data/z-db-2/mongod.log"
+  path: "/data/z-db-3/mongod.log"
   logAppend: true
 replication:
   replSetName: ubuntu-db
-storage:
-  wiredTiger:
-    engineConfig:
-      cacheSizeGB: 10
 net:
   bindIpAll: true
+  port: 27100
 
 
