--- a/testing-dbs/mongod-ubuntu-one.conf
+++ b/testing-dbs/mongod-ubuntu-one.conf
@@ -1,18 +1,17 @@
 storage:
-  dbPath: ~/data/z-db-1
+  dbPath: /data/z-db-1
+  wiredTiger:
+    engineConfig:
+      cacheSizeGB: 10
 processManagement:
   fork: true
 systemLog:
   destination: file
-  path: "~/data/z-db-1/mongod.log"
+  path: "/data/z-db-1/mongod.log"
   logAppend: true
 replication:
   replSetName: ubuntu-db
-storage:
-  wiredTiger:
-    engineConfig:
-      cacheSizeGB: 10
 net:
   bindIpAll: true
-
+  port: 27000
 
